--- a/styles/main.css
+++ b/styles/main.css
@@ -40,9 +40,24 @@ a {
   display: -ms-flexbox;
   display: flex;
 }
+@media screen and (max-width: 768px) {
+  .articles__container {
+    -ms-flex-wrap: wrap-reverse;
+        flex-wrap: wrap-reverse;
+    width: 100vw;
+    margin-left: -15px;
+  }
+}
 .articles__container--text, .articles__container--image {
   max-width: 50%;
   min-height: 600px;
+}
+@media screen and (max-width: 768px) {
+  .articles__container--text, .articles__container--image {
+    max-width: unset;
+    width: 100%;
+    min-height: 315px;
+  }
 }
 .articles__container > [class$="--image"] {
   position: relative;
@@ -54,6 +69,11 @@ a {
   bottom: 0;
   width: 50vw;
   z-index: -1;
+}
+@media screen and (max-width: 768px) {
+  .articles__container > [class$="--image"]::before {
+    display: none;
+  }
 }
 .articles__container > [class$="--text"] {
   display: -webkit-box;
@@ -67,19 +87,48 @@ a {
       -ms-flex-pack: center;
           justify-content: center;
 }
+@media screen and (max-width: 768px) {
+  .articles__container > [class$="--text"] {
+    margin: 70px 0 35px;
+    padding: 0 35px;
+    text-align: center;
+  }
+}
 .articles__container:nth-of-type(1) > [class$="--text"] {
   padding-right: 105px;
+}
+@media screen and (max-width: 1110px) {
+  .articles__container:nth-of-type(1) > [class$="--text"] {
+    padding-right: 35px;
+  }
 }
 .articles__container:nth-of-type(1) > [class$="--image"]::before {
   right: 50vw;
   left: 0;
   background-color: #FFD600;
 }
+@media screen and (max-width: 768px) {
+  .articles__container:nth-of-type(1) > [class$="--image"]::before {
+    display: none;
+  }
+}
 .articles__container:nth-of-type(2) > [class$="--text"] {
   -webkit-box-ordinal-group: 3;
       -ms-flex-order: 2;
           order: 2;
   padding-left: 105px;
+}
+@media screen and (max-width: 1110px) {
+  .articles__container:nth-of-type(2) > [class$="--text"] {
+    padding-left: 30px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .articles__container:nth-of-type(2) > [class$="--text"] {
+    -webkit-box-ordinal-group: 2;
+        -ms-flex-order: 1;
+            order: 1;
+  }
 }
 .articles__container:nth-of-type(2) > [class$="--text"] .text__link::after {
   background-color: #FFDBD3;
@@ -97,11 +146,26 @@ a {
   left: -50vw;
   background-color: #FE7968;
 }
+@media screen and (max-width: 768px) {
+  .articles__container:nth-of-type(2) > [class$="--image"]::before {
+    display: none;
+  }
+}
 
 .body__container--tiles {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+}
+@media screen and (max-width: 768px) {
+  .body__container--tiles {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    width: 100vw;
+    margin-left: -15px;
+  }
 }
 
 .tiles__container {
@@ -122,6 +186,11 @@ a {
   width: 50%;
   min-height: 600px;
 }
+@media screen and (max-width: 768px) {
+  .tiles__container {
+    width: 100%;
+  }
+}
 .tiles__container::before {
   content: "";
   position: absolute;
@@ -129,6 +198,11 @@ a {
   bottom: 0;
   width: 50vw;
   z-index: -1;
+}
+@media screen and (max-width: 768px) {
+  .tiles__container::before {
+    display: none;
+  }
 }
 .tiles__container:nth-of-type(1)::before {
   background-color: #A1DECF;
@@ -142,6 +216,11 @@ a {
   background: -webkit-gradient(linear, left top, left bottom, color-stop(31%, #5bcffe), color-stop(41%, #5bcffe), color-stop(48%, #2cb5fb), color-stop(51%, #2cb5fb), color-stop(57%, #5BCFFE));
   background: -o-linear-gradient(top, #5bcffe 31%, #5bcffe 41%, #2cb5fb 48%, #2cb5fb 51%, #5BCFFE 57%);
   background: linear-gradient(to bottom, #5bcffe 31%, #5bcffe 41%, #2cb5fb 48%, #2cb5fb 51%, #5BCFFE 57%);
+}
+@media screen and (max-width: 768px) {
+  .tiles__container:nth-of-type(2)::before {
+    display: none;
+  }
 }
 .tiles__container:nth-of-type(2) > [class$="--header"] {
   color: #19536b;
@@ -167,6 +246,16 @@ a {
   line-height: 30px;
   text-align: center;
 }
+@media screen and (max-width: 1110px) {
+  .tiles__container--content {
+    padding: 0 10px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .tiles__container--content {
+    margin-bottom: 30px;
+  }
+}
 
 .text__header {
   font-family: "Fraunces", serif;
@@ -174,10 +263,21 @@ a {
   font-weight: 900;
   color: #242F41;
 }
+@media screen and (max-width: 768px) {
+  .text__header {
+    font-size: 32px;
+  }
+}
 
 .text__content {
   margin: 50px 0 40px;
   line-height: 32px;
+}
+@media screen and (max-width: 768px) {
+  .text__content {
+    margin: 35px 0;
+    line-height: 30px;
+  }
 }
 
 .text__link {
@@ -202,6 +302,14 @@ a {
   -webkit-transition: all 0.2s;
   -o-transition: all 0.2s;
   transition: all 0.2s;
+}
+@media screen and (max-width: 768px) {
+  .text__link::after {
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+        -ms-transform: translateX(-50%);
+            transform: translateX(-50%);
+  }
 }
 .text__link:hover::after, .text__link:active::after {
   background-color: #fad400;
