SA-menu-added nav and header

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,7 @@
 @import "./variables";
 @import "./mixins";
 @import "./global";
+@import "./navigation";
+@import "./header";
 @import "./articles";
 @import "./footer";
