--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -2,15 +2,29 @@
 	background-color: $blueish;
 
 	.body__container--nav {
+		max-width: 1300px;
+		margin: 0 auto;
 		display: flex;
 		justify-content: space-between;
-		padding-top: 20px;
-		padding-bottom: 20px;
+		align-items: flex-end;
+		padding: 10px 40px;
+
+		@media screen and (max-width: $largeMobile) {
+			padding: 10px 15px;
+		}
 
 		.nav__name {
+			font-size: 1.5rem;
 			color: $white;
 		}
 
+		.nav__burger {
+			display: none;
+
+			@media screen and (max-width: $largeMobile) {
+				display: block;
+			}
+		}
 		.nav__items {
 			position: absolute;
 			top: 70px;
@@ -32,41 +46,52 @@
 				border-bottom: 30px solid #fff;
 				border-left: 30px solid transparent;
 			}
-		}
 
-		.show {
-			display: none;
-		}
+			.nav__item {
+				margin-left: 50px;
+				color: $white;
 
-		.nav__item {
-			color: $mediumGrey;
-			margin-left: 90px;
-			margin-right: 90px;
+				&:hover {
+					color: $darkGrey;
+				}
 
-			&:nth-last-child(1) {
-				border-radius: 30px;
-				line-height: 300%;
-				font-family: $fontSerif;
-				color: $darkGrey;
-				background-color: $yellow;
-				text-transform: uppercase;
+				&:nth-last-child(1) {
+					border-radius: 30px;
+					padding: 10px 20px;
+					font-family: $fontSerif;
+					color: $darkGrey;
+					background-color: $white;
+					text-transform: uppercase;
+
+					&:hover {
+						color: $white;
+						background-color: rgb(255, 255, 255, 0.2);
+					}
+				}
+
+				@media screen and (max-width: $largeMobile) {
+					color: $mediumGrey;
+					margin-left: 90px;
+					margin-right: 90px;
+
+					&:nth-last-child(1) {
+						background-color: $yellow;
+					}
+				}
 			}
 		}
 	}
 }
 
-
-
-// @media screen and (max-width: $largeMobile) {
-// 			.nav__name {
-// 				font-size: 1.5rem;
-// jak odkomituję f-s, to on zmienia się od razu na 375px. U Ciebie widzę że jeszcze to inaczej jest rozpisane. Tak samo było z inymi właściwościami.
-// 			}
-// }
-
-
-
-
-
-
-
+@media screen and (max-width: $largeMobile) {
+	.bg__color--blue {
+		.body__container--nav {
+			.show {
+				display: none;
+			}
+			.burger__rotate{
+				rotate: 90deg;
+			}
+		}
+	}
+}
