[SA-header] added mobile version

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,26 +1,33 @@
 .bg__color--blue {
 	.body__container--header {
-		position: relative;
-		top: 0;
-		left: 0;
-		display: flex;
-		flex-direction: column;
-		gap: 65px;
-		// @extend %adjust-img;
-		text-align: center;
-		background-image: url(../images/desktop/image-header.jpg);
-		background-size: cover;
-		background-repeat: no-repeat;
+		background: no-repeat,
+			center / cover url('../images/desktop/image-header.jpg');
+
+		@media screen and (max-width: $largeMobile) {
+			background: no-repeat, cover url('../images/mobile/image-header.jpg');
+		}
 
 		.header__slogan {
-			padding-top: 150px;
-			color: $white;
-			text-transform: uppercase;
-			font-family: $fontSerif;
-			letter-spacing: 5px;
-		}
-		.header__arrow {
-			padding-bottom: 250px;
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			text-align: center;
+			row-gap: 100px;
+			padding-top: 70px;
+			padding-bottom: 200px;
+
+			@media screen and (max-width: $largeMobile) {
+				padding-top: 70px;
+				row-gap: 40px;
+				padding-bottom: 140px;
+			}
+
+			&--text {
+				color: $white;
+				text-transform: uppercase;
+				font-family: $fontSerif;
+				letter-spacing: 7px;
+			}
 		}
 	}
 }
