--- a/sass/_navigation.scss
+++ b/sass/_navigation.scss
@@ -7,11 +7,7 @@
 		justify-content: space-between;
 		align-items: flex-end;
 		margin: 0 auto;
-		padding: 10px 100px;
-
-		@media screen and (max-width: $smallDesktop) {
-			padding: 10px 15px;
-		}
+		padding: 10px;
 
 		.nav__name {
 			font-size: 1.5rem;
