--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -31,6 +31,9 @@ $pink: #FE7968;
 $greenish: #A1DECF;
 $blueish: #5BCFFE;
 
+// -- Navigation background
+$blueNav:#3ebfff; 
+
 // -- Font colors
 $darkGrey: #242F41;
 $mediumGrey: #77747F;
