--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,10 +1,10 @@
 .bg__color--blue {
 	.body__container--header {
-		background: no-repeat,
+		background: no-repeat 
 			center / cover url('../images/desktop/image-header.jpg');
 
 		@media screen and (max-width: $largeMobile) {
-			background: no-repeat, cover url('../images/mobile/image-header.jpg');
+			background: no-repeat cover url('../images/mobile/image-header.jpg');
 		}
 
 		.header__slogan {
@@ -13,11 +13,10 @@
 			align-items: center;
 			text-align: center;
 			row-gap: 100px;
-			padding-top: 70px;
+			padding-top: 90px;
 			padding-bottom: 200px;
 
 			@media screen and (max-width: $largeMobile) {
-				padding-top: 70px;
 				row-gap: 40px;
 				padding-bottom: 140px;
 			}
