--- a/sass/_global.scss
+++ b/sass/_global.scss
@@ -19,6 +19,10 @@ body {
   padding: 0 15px;
 }
 
+.body__container-fluid {
+  width: 100vw;
+}
+
 a {
   text-decoration: none;
   transition: all 0.2s;;
