--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,9 @@
 @import "./variables";
 @import "./mixins";
 @import "./global";
+@import "./navigation";
+@import "./header";
 @import "./articles";
+@import "./reviews";
+@import "./photos";
 @import "./footer";
